--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "hexo deploy",
     "server": "hexo server",
     "new_post": "hexo new",
-    "publish": "rm -rf build && npm run build && git add . && git commit -m 'publish blog'"
+    "publish": "rm -rf build && npm run build && git add . && git commit -m 'chore: publish blog'"
   },
   "hexo": {
     "version": "7.3.0"
