--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server:draft": "npm run clean && hexo server --draft",
     "new_post": "hexo new",
     "new_draft": "hexo new draft 'title'",
-    "publish_draft": "hexo publish 'title'",
+    "publish_draft_default": "hexo publish 'title'",
+    "publish_draft": "hexo publish",
     "publish": "rm -rf public && npm run build && git add . && git commit -m 'chore: publish blog' && git push"
   },
   "hexo": {
