chore: publish blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
   "cSpell.words": [
+    "anki",
     "Bencode",
     "IPFS",
     "sitemapindex",
     "solana",
-    "substreams"
+    "substreams",
+    "webext",
+    "yuque"
   ]
 }
