--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "publish_draft_default": "hexo publish 'title'",
     "publish_draft": "hexo publish",
     "cp_google_search_file": "cp googled8bce8c456034b33.html public",
-    "publish": "rm -rf public && npm run build && npm run cp_google_search_file && git add . && git commit -m 'chore: publish blog' && git push"
+    "publish": "rm -rf public && npm run build && npm run cp_google_search_file && git add . && git commit -m 'chore: publish blog' && git push",
+    "postinstall": "patch-package"
   },
   "hexo": {
     "version": "7.3.0"
@@ -27,12 +28,14 @@
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-reference": "^1.0.4",
+    "hexo-reference": "1.0.4",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.3.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
